5.4.6
[add] allow developers to use their own api key
    - xbmcgui.Window(10000).setProperty('plugin.video.youtube-configs', json.dumps({"origin": ADDON_ID, "main": {"system": SYSTEM_NAME, "key": API_KEY[, "id": CLIENT_ID, "secret": CLIENT_SECRET]}}))
[add] audio only to quality selection
[add] age gate enforcement - Settings -> General
[add] allow offensive content - Settings -> General
[add] quick search and quick search (incognito) to Settings -> Folders
    - incognito doesn't add to search history or run post play events (add to watch history)
[add] quick search to channels (no history)
[add] Live folder to channels
[fix/upd] use select dialog for subtitle settings
    - [add] Configure subtitles to Settings -> General
    - [add] Current language with No auto-generated subtitles option
[upd] youtube_resolver: allow resolve by url
[fix/upd] do not use distutils.version.LooseVersion for version compare [stefansaraev]
[fix/upd] add check to api key stripping
[fix/upd] subtitles default to non asr track when possible
[fix/upd] login client logging and endpoints
[fix/upd] Watch Later working
    - Clear Settings - Folders - Custom Watch Later Playlist ID
[fix/upd] History working
    - cannot add to history from add-on
    - Clear Settings - Folders - Custom History Playlist ID
[fix] /api/update route logging
[upd] Hebrew strings [Eng2Heb]
[upd] Polish strings [Etharr]
[upd] Italian strings [DjDiabolik]
[upd] Hungarian strings [lacesz-sh]

5.4.5
[fix] tighten regex for routing, resolving incorrect routing

5.4.4
[fix] overlapping regex causing no playlist videos

5.4.3
[add] mpeg-dash support for live content (requires inputstream.adaptive >= 2.0.12)
[add] add route to update api keys
    plugin://plugin.video.youtube/api/update/?enable=true&client_id=<client_id>&client_secret=<client_secret>&api_key=<api_key>
[fix/upd] refactor subtitles ** subtitles setting will be reset
[fix/upd] add My Subscriptions (Filtered) to dual login requirements