@@ -11,6 +11,7 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
+[add] Saved Playlists
 [add] allow developers to use their own api key
 [add] audio only to quality selection
 [add] age gate enforcement - Settings -> General
@@ -27,9 +28,9 @@
 [fix/upd] add check to api key stripping
 [fix/upd] subtitles default to non asr track when possible
 [fix/upd] login client logging and endpoints
-[fix/upd] Watch Later working
+[fix/upd] Watch Later
     - Clear Settings - Folders - Custom Watch Later Playlist ID
-[fix/upd] History working
+[fix/upd] History
     - cannot add to history from add-on
     - Clear Settings - Folders - Custom History Playlist ID
 [fix] /api/update route logging
