@@ -1,4 +1,5 @@
 5.4.6
+[add] Saved Playlists
 [add] allow developers to use their own api key
     - xbmcgui.Window(10000).setProperty('plugin.video.youtube-configs', json.dumps({"origin": ADDON_ID, "main": {"system": SYSTEM_NAME, "key": API_KEY[, "id": CLIENT_ID, "secret": CLIENT_SECRET]}}))
 [add] audio only to quality selection
@@ -16,9 +17,9 @@
 [fix/upd] add check to api key stripping
 [fix/upd] subtitles default to non asr track when possible
 [fix/upd] login client logging and endpoints
-[fix/upd] Watch Later working
+[fix/upd] Watch Later
     - Clear Settings - Folders - Custom Watch Later Playlist ID
-[fix/upd] History working
+[fix/upd] History
     - cannot add to history from add-on
     - Clear Settings - Folders - Custom History Playlist ID
 [fix] /api/update route logging
